--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+  yak 3.0.1 [2014.06.05]
+------------------------------------------------------------------------------
+
+  - Add new configuration field: commonLibs
+  - Remove obsolete configuration fields: kdbUser, kdbPassword
+
+------------------------------------------------------------------------------
   yak 3.0 [2014.04.30]
 ------------------------------------------------------------------------------
 
