uFile attribute is now normalized to platform dependent representation

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  yak 3.0.2 [2014.07.10]
+------------------------------------------------------------------------------
+
+  - uFile attribute is now normalized to platform dependent representation
+
+------------------------------------------------------------------------------
   yak 3.0.1 [2014.06.05]
 ------------------------------------------------------------------------------
 
