Switch binary freezing to pyinstaller Issue #7

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,12 @@
 ------------------------------------------------------------------------------
-  yak 3.0.2 [2014.07.15]
+  yak 3.1.0 [2014.08.01]
+------------------------------------------------------------------------------
+  
+  - Change application packaging to PyInstaller
+  - Experimental: Mac OS X support
+
+------------------------------------------------------------------------------
+  yak 3.0.2 [2014.07.18]
 ------------------------------------------------------------------------------
 
   - uFile attribute is now normalized to platform dependent representation
