--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@
   - Add utc/local switch (timestampMode flag) for stamping start/stop times
   - Reverse order of components while executing stop and interrupt commands
   - Fix: exit code for console command always indicates error
+  - Fix: caching of overwritten component arguments in shell mode
 
 ------------------------------------------------------------------------------
   yak 3.0.2 [2014.07.18]
