--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
 ------------------------------------------------------------------------------
-  yak 3.1.0 [TBA]
+  yak 3.1.0 [2014.12.09]
 ------------------------------------------------------------------------------
   
   - Experimental: Mac OS X support (via PyInstaller)
