--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  yak 3.1.1 [2015.05.11]
+------------------------------------------------------------------------------
+
+  - Filtering by component status support for info command 
+
+------------------------------------------------------------------------------
   yak 3.1.0 [2014.12.09]
 ------------------------------------------------------------------------------
   
