Extend command aliases functionality

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  yak 3.1.2 [2015.05.11]
+------------------------------------------------------------------------------
+
+  - Extend command aliases functionality 
+
+------------------------------------------------------------------------------
   yak 3.1.1 [2015.05.11]
 ------------------------------------------------------------------------------
 
