Silent mode for components

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,9 @@
 ------------------------------------------------------------------------------
-  yak 3.1.2 [2015.05.11]
+  yak 3.1.2 [2015.05.20]
 ------------------------------------------------------------------------------
 
   - Extend command aliases functionality 
+  - Silent mode for components
 
 ------------------------------------------------------------------------------
   yak 3.1.1 [2015.05.11]
