Fix #10: yak info: error while reading mem_rss

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,9 +1,10 @@
 ------------------------------------------------------------------------------
-  yak 3.1.2 [2015.05.20]
+  yak 3.1.2 [2015.05.27]
 ------------------------------------------------------------------------------
 
   - Extend command aliases functionality 
   - Silent mode for components
+  - Fix: race condition in mem_rss/mem_vms retrieval
 
 ------------------------------------------------------------------------------
   yak 3.1.1 [2015.05.11]
