--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+  yak 3.1.3 [2015.07.06]
+------------------------------------------------------------------------------
+
+  - Remove stale code
+  - Fix: casting in mem_rss/mem_vms retrieval
+
+------------------------------------------------------------------------------
   yak 3.1.2 [2015.05.27]
 ------------------------------------------------------------------------------
 
