--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,9 +1,10 @@
 ------------------------------------------------------------------------------
-  yak 3.1.3 [2015.07.06]
+  yak 3.1.3 [2015.07.x]
 ------------------------------------------------------------------------------
 
   - Remove stale code
   - Fix: casting in mem_rss/mem_vms retrieval
+  - Fix: WSFULL check for large stderr capture
 
 ------------------------------------------------------------------------------
   yak 3.1.2 [2015.05.27]
