--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,8 @@
 ------------------------------------------------------------------------------
-  yak 3.1.3 [2015.07.x]
+  yak 3.1.3 [2015.07.10]
 ------------------------------------------------------------------------------
 
+  - Export ECM_VERSION in bootstrapped process environmental variables
   - Remove stale code
   - Fix: casting in mem_rss/mem_vms retrieval
   - Fix: WSFULL check for large stderr capture
