--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+  yak 3.2 [2015.x.x]
+------------------------------------------------------------------------------
+
+  - psutil library update
+  - Improved performance during components bootstrap/teardown
+
+------------------------------------------------------------------------------
   yak 3.1.3 [2015.07.10]
 ------------------------------------------------------------------------------
 
