--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,7 @@
   - psutil library update
   - Remove stale PID from status file for TERMINATED/STOPPED components 
     while accessing is_alive property (e.g. info command)
-  - Improved performance during components bootstrap/teardown
+  - Reduced wait time during components bootstrap/teardown
 
 ------------------------------------------------------------------------------
   yak 3.1.3 [2015.07.10]
