--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,6 +6,7 @@
   - Remove stale PID from status file for TERMINATED/STOPPED components 
     while accessing is_alive property (e.g. info command)
   - Reduced wait time during components bootstrap/teardown
+  - Allow to define multiple q runtime environments in system configuration
 
 ------------------------------------------------------------------------------
   yak 3.1.3 [2015.07.10]
