--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
 ------------------------------------------------------------------------------
-  yak 3.2 [2015.x.x]
+  yak 3.2.0 [2015.09.14]
 ------------------------------------------------------------------------------
 
   - psutil library update
