#11: Remove no-longer alive components from the status file

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  yak 3.2.1 [2015.xx.xx]
+------------------------------------------------------------------------------
+
+  - Handling of detached components
+
+------------------------------------------------------------------------------
   yak 3.2.0 [2015.09.14]
 ------------------------------------------------------------------------------
 
