--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@
   - Handling of detached components
   - Improve performance: roll log file lookup for q components
   - Remove stopWait configuration parameter
+  - Commands: out/err/log can be applied to more than one component in single execution
   - psutil library upgraded to 4.3.0
   - configobj upgraded to 5.0.6
 
