--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,10 +5,11 @@
   - Add new command: kill
   - Rework component status persistence and detection
   - Handling of detached components
-  - Improve performance: roll log file lookup for q components
   - Remove stopWait configuration parameter
   - PIDs in status file are no longer removed
   - Commands: out/err/log can be applied to more than one component in single execution
+  - Improve performance: roll log file lookup for q components
+  - Fix: wsfull status detection
   - psutil library upgraded to 4.3.0
   - configobj upgraded to 5.0.6
 
